:bug: correction mobile mode

--- a/style.css
+++ b/style.css
@@ -220,58 +220,3 @@ body.open .sidebar {
 }
 
 /*SECTION WATCH TIME*/
-.section-watch{
-  position: absolute;
-  top: 20%;
-  left: 34%;
-  transform: translate(-50% -50%);  
-  z-index: 0;
-}
-.section-watch > .containet > .content{
-  text-align: center;
-  z-index: 0;
-}
-.box-watch{
-  padding: 80px 35px;
-  border: 16px solid rgb(84, 62, 246);
-  border-radius: 50%;
-}
-.box-watch .watch{
-  font-size: 90px;
-  color: #7e7e7f;
-}
-.box-watch .status{
-  font-size: 20px;
-  color: #7e7e7f;
-}
-
-
-.btn{
-  margin-top: 20px;
-  font-size: 26px;
-  padding: 10px 14px;
-  border: 4px solid #f1f1f1;
-  border-radius: 50% ;
-  text-align: center;
-  color: #9f9f9f;
-}
-
-button + button{
-  margin-left: 20px;
-}
-
-.start-btn{
-  color:rgb(84, 62, 246);
-  border:5px solid   rgb(84, 62, 246);
-  font-size: 34px;
-}
-
-@media (width < 600px){
-  .section-watch{
-    position: relative;
-    margin: 7%;
-    left: auto;
-    top: auto;
-    
-  }
-}
